Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14508

lfs mirror operations do not preserve timestamps

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • 3
    • 9223372036854775807

      lfs mirror extend -N sometimes causes the file atime to go backwards:

      # echo XXX > f0; stat f0; sleep 60; cat f0; stat f0; sleep 60; date; lfs mirror extend -N -p ddn_hdd f0; stat f0
        File: ‘f0’
        Size: 4         	Blocks: 1          IO Block: 4194304 regular file
      Device: 2c54f966h/743766374d	Inode: 144115205289279491  Links: 1
      Access: (0644/-rw-r--r--)  Uid: (    0/    root)   Gid: (    0/    root)
      Access: 2021-03-10 10:17:48.000000000 -0600
      Modify: 2021-03-10 10:17:48.000000000 -0600
      Change: 2021-03-10 10:17:48.000000000 -0600
       Birth: -
      XXX
        File: ‘f0’
        Size: 4         	Blocks: 8          IO Block: 4194304 regular file
      Device: 2c54f966h/743766374d	Inode: 144115205289279491  Links: 1
      Access: (0644/-rw-r--r--)  Uid: (    0/    root)   Gid: (    0/    root)
      Access: 2021-03-10 10:18:48.000000000 -0600
      Modify: 2021-03-10 10:17:48.000000000 -0600
      Change: 2021-03-10 10:17:48.000000000 -0600
       Birth: -
      Wed Mar 10 10:19:48 CST 2021
        File: ‘f0’
        Size: 4         	Blocks: 8          IO Block: 4194304 regular file
      Device: 2c54f966h/743766374d	Inode: 144115205289279491  Links: 1
      Access: (0644/-rw-r--r--)  Uid: (    0/    root)   Gid: (    0/    root)
      Access: 2021-03-10 10:17:48.000000000 -0600
      Modify: 2021-03-10 10:17:48.000000000 -0600
      Change: 2021-03-10 10:17:48.000000000 -0600
       Birth: -
      

            bobijam Zhenyu Xu
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: